--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url:          https://philipnelson5.github.io/
 # baseurl:           
 
 # Gems used
-gems:
+plugins:
   - jekyll-feed
   - jekyll-archives
   - jekyll-paginate
