--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Site Title
-description:      Site description for the metas.
+description:      Site description
 logo:             omikron.png
 disqus_shortname: shortname
 # Assign a default image for your site's header and footer
@@ -7,14 +7,14 @@ default_bg:       default_bg.jpg
 search:           true
 share:            true
 # Read Time is a calculator tp provide post read-time based on word count. Usage is recommended.
-readtime:         true
+readtime:         false
 # Turn on or off the fin animations in the header and footer
-triangleheader:	  true
-animated_fins:    true
+triangleheader:	  false
+animated_fins:    false
 # Specify the fin color in RGB value
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
-url:          http://hmfaysal.me/hmfaysal-omega-theme
+url:          https://philipnelson5.github.io/
 # baseurl:           
 
 # Gems used
@@ -42,9 +42,9 @@ jekyll-archives:
 
 # Owner/author information
 author:
-  name:           Your Name
+  name:           Philip Nelson
   picture:        your-photo.jpg
-  email:          your@email.com
+  email:          PhilipNelson5@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:    Some Details about yourself
   # Social networking links used in footer. Update and remove as you like.
@@ -55,7 +55,7 @@ author:
   instagram:
   tumblr:
   # For Google Authorship https://plus.google.com/authorship
-  google_plus:    "http://plus.google.com/123123123123132123"
+  google_plus:
 
 # Analytics and webmaster tools stuff goes here
 google_analytics:
@@ -85,7 +85,7 @@ sitemap:
         - "/index.html"
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    America/Denver
 future:      true
 markdown:    kramdown
 highlighter: rouge
