--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-modernist
 title: Philip's Software Projects
 description: A software manual for MATH 5620
