--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,3 @@
-title: Philip's Software Projects
-email: PhilipNelson5@gmail.com
-description: software and projects by me, Philip
-url: "http://philipnelson5.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-github_username: philipnelson5
-
-# Build settings
+theme: jekyll-theme-merlot
 markdown: kramdown
 mathjax: true
-theme: jekyll-theme-modernist
-plugins:
-  - jekyll-feed
